--- a/requirements.txt
+++ b/requirements.txt
@@ -14,12 +14,16 @@ babel==2.17.0
     #   sphinx
 beautifulsoup4==4.13.4
     # via pydata-sphinx-theme
+black==25.9.0
+    # via pyprophet (setup.py)
 certifi==2025.4.26
     # via requests
 charset-normalizer==3.4.2
     # via requests
 click==8.1.8
     # via
+    #   black
+    #   pyprophet
     #   pyprophet (setup.py)
     #   sphinx-click
 contourpy==1.3.0
@@ -27,7 +31,9 @@ contourpy==1.3.0
 cycler==0.12.1
     # via matplotlib
 cython==3.1.1
-    # via pyprophet (setup.py)
+    # via
+    #   pyprophet
+    #   pyprophet (setup.py)
 docutils==0.21.2
     # via
     #   pydata-sphinx-theme
@@ -38,11 +44,16 @@ duckdb==1.3.0
     # via
     #   duckdb-extension-sqlite-scanner
     #   duckdb-extensions
+    #   pyprophet
     #   pyprophet (setup.py)
 duckdb-extension-sqlite-scanner==1.3.0
-    # via pyprophet (setup.py)
+    # via
+    #   pyprophet
+    #   pyprophet (setup.py)
 duckdb-extensions==1.3.0
-    # via pyprophet (setup.py)
+    # via
+    #   pyprophet
+    #   pyprophet (setup.py)
 exceptiongroup==1.3.0
     # via pytest
 execnet==2.1.1
@@ -66,50 +77,76 @@ joblib==1.5.1
 kiwisolver==1.4.7
     # via matplotlib
 loguru==0.7.3
-    # via pyprophet (setup.py)
+    # via
+    #   pyprophet
+    #   pyprophet (setup.py)
 lxml==6.0.2
-    # via pyprophet (setup.py)
+    # via
+    #   pyprophet
+    #   pyprophet (setup.py)
 markupsafe==3.0.2
     # via jinja2
 matplotlib==3.9.4
     # via
     #   pyopenms
+    #   pyprophet
     #   pyprophet (setup.py)
+mypy==1.18.2
+    # via pyprophet (setup.py)
+mypy-extensions==1.1.0
+    # via
+    #   black
+    #   mypy
 numpy==2.0.2
     # via
     #   contourpy
     #   matplotlib
-    #   numexpr
     #   pandas
-    #   patsy
     #   pyopenms
+    #   pyprophet
     #   pyprophet (setup.py)
     #   scikit-learn
     #   scipy
-    #   xgboost
-nvidia-nccl-cu12==2.26.5
-    # via xgboost
+    #   xgboost-cpu
 packaging==25.0
     # via
+    #   black
     #   matplotlib
+    #   pyprophet
+    #   pyprophet (setup.py)
     #   pytest
     #   sphinx
 pandas==2.2.3
     # via
     #   pyopenms
+    #   pyprophet
     #   pyprophet (setup.py)
+pathspec==0.12.1
+    # via
+    #   black
+    #   mypy
 pillow==11.3.0
     # via matplotlib
+platformdirs==4.4.0
+    # via black
 pluggy==1.6.0
     # via pytest
 polars==1.30.0
-    # via pyprophet (setup.py)
+    # via
+    #   pyprophet
+    #   pyprophet (setup.py)
 psutil==7.0.0
-    # via pyprophet (setup.py)
+    # via
+    #   pyprophet
+    #   pyprophet (setup.py)
 pyarrow==20.0.0
-    # via pyprophet (setup.py)
+    # via
+    #   pyprophet
+    #   pyprophet (setup.py)
 pydata-sphinx-theme==0.16.1
-    # via pyprophet (setup.py)
+    # via
+    #   pyprophet
+    #   pyprophet (setup.py)
 pygments==2.19.1
     # via
     #   accessible-pygments
@@ -117,35 +154,53 @@ pygments==2.19.1
     #   pytest
     #   sphinx
 pyopenms==3.4.0
-    # via pyprophet (setup.py)
+    # via
+    #   pyprophet
+    #   pyprophet (setup.py)
 pyparsing==3.2.3
     # via matplotlib
 pypdf==6.0.0
-    # via pyprophet (setup.py)
+    # via
+    #   pyprophet
+    #   pyprophet (setup.py)
+pyprophet[docs,testing] @ file:///home/singjc/Documents/github/clean/pyprophet
+    # via file:///home/singjc/documents/github/clean/pyprophet
 pytest==8.4.0
     # via
+    #   pyprophet
     #   pyprophet (setup.py)
     #   pytest-regtest
     #   pytest-xdist
 pytest-regtest==2.3.3
-    # via pyprophet (setup.py)
+    # via
+    #   pyprophet
+    #   pyprophet (setup.py)
 pytest-xdist==3.7.0
-    # via pyprophet (setup.py)
+    # via
+    #   pyprophet
+    #   pyprophet (setup.py)
 python-dateutil==2.9.0.post0
     # via
     #   matplotlib
     #   pandas
+pytokens==0.2.0
+    # via black
 pytz==2025.2
     # via pandas
 requests==2.32.4
     # via sphinx
-scikit-learn==1.6.1
+ruff==0.14.1
     # via pyprophet (setup.py)
+scikit-learn==1.6.1
+    # via
+    #   pyprophet
+    #   pyprophet (setup.py)
 scipy==1.13.1
     # via
+    #   pyprophet
     #   pyprophet (setup.py)
     #   scikit-learn
-    #   xgboost
+    #   xgboost-cpu
 six==1.17.0
     # via python-dateutil
 snowballstemmer==3.0.1
@@ -155,17 +210,24 @@ soupsieve==2.7
 sphinx==7.4.7
     # via
     #   pydata-sphinx-theme
+    #   pyprophet
     #   pyprophet (setup.py)
     #   sphinx-click
     #   sphinx-copybutton
     #   sphinx-rtd-theme
     #   sphinxcontrib-jquery
 sphinx-click==6.0.0
-    # via pyprophet (setup.py)
+    # via
+    #   pyprophet
+    #   pyprophet (setup.py)
 sphinx-copybutton==0.5.2
-    # via pyprophet (setup.py)
+    # via
+    #   pyprophet
+    #   pyprophet (setup.py)
 sphinx-rtd-theme==3.0.2
-    # via pyprophet (setup.py)
+    # via
+    #   pyprophet
+    #   pyprophet (setup.py)
 sphinxcontrib-applehelp==2.0.0
     # via sphinx
 sphinxcontrib-devhelp==2.0.0
@@ -184,20 +246,26 @@ threadpoolctl==3.6.0
     # via scikit-learn
 tomli==2.2.1
     # via
+    #   black
+    #   mypy
     #   pytest
     #   sphinx
 typing-extensions==4.14.0
     # via
     #   beautifulsoup4
+    #   black
     #   exceptiongroup
+    #   mypy
     #   pydata-sphinx-theme
     #   pypdf
 tzdata==2025.2
     # via pandas
 urllib3==2.5.0
     # via requests
-xgboost==2.1.4
-    # via pyprophet (setup.py)
+xgboost-cpu==2.1.4
+    # via
+    #   pyprophet
+    #   pyprophet (setup.py)
 zipp==3.22.0
     # via
     #   importlib-metadata
