--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -35,9 +35,6 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y build-essential
 
-      # REMOVED: pip install -e . (this was causing the numpy source directory issue)
-      # The build scripts will handle all dependency installation
-
       - name: Build executable (Linux)
         if: runner.os == 'Linux'
         run: bash scripts/build/build_linux.sh
@@ -45,6 +42,7 @@ jobs:
       - name: Build executable (Windows)
         if: runner.os == 'Windows'
         run: scripts/build/build_windows.bat
+        shell: cmd
 
       - name: Build executable (macOS)
         if: runner.os == 'macOS'
@@ -74,9 +72,24 @@ jobs:
       - name: Test basic commands (Windows)
         if: runner.os == 'Windows'
         run: |
-          echo "Testing --help and --version..."
-          dist\pyprophet.exe --help
-          dist\pyprophet.exe --version
+          Write-Host "Testing --help and --version..."
+          
+          Write-Host "Running: dist\pyprophet.exe --help"
+          & dist\pyprophet.exe --help
+          if ($LASTEXITCODE -ne 0) {
+            Write-Error "pyprophet.exe --help failed with exit code $LASTEXITCODE"
+            exit $LASTEXITCODE
+          }
+          
+          Write-Host "Running: dist\pyprophet.exe --version"
+          & dist\pyprophet.exe --version
+          if ($LASTEXITCODE -ne 0) {
+            Write-Error "pyprophet.exe --version failed with exit code $LASTEXITCODE"
+            exit $LASTEXITCODE
+          }
+          
+          Write-Host "✅ Basic commands test passed"
+        shell: pwsh
 
       - name: Test score commands (Linux/macOS)
         if: runner.os != 'Windows'
@@ -90,11 +103,22 @@ jobs:
       - name: Test score commands (Windows)
         if: runner.os == 'Windows'
         run: |
-          echo "Testing score at ms1ms2 level..."
-          dist\pyprophet.exe score --in tests/data/test_data.osw --level ms1ms2 --pi0_lambda 0 0 0
+          Write-Host "Testing score at ms1ms2 level..."
+          & dist\pyprophet.exe score --in tests/data/test_data.osw --level ms1ms2 --pi0_lambda 0 0 0
+          if ($LASTEXITCODE -ne 0) {
+            Write-Error "score ms1ms2 failed with exit code $LASTEXITCODE"
+            exit $LASTEXITCODE
+          }
           
-          echo "Testing score at transition level..."
-          dist\pyprophet.exe score --in tests/data/test_data.osw --level transition --pi0_lambda 0 0 0
+          Write-Host "Testing score at transition level..."
+          & dist\pyprophet.exe score --in tests/data/test_data.osw --level transition --pi0_lambda 0 0 0
+          if ($LASTEXITCODE -ne 0) {
+            Write-Error "score transition failed with exit code $LASTEXITCODE"
+            exit $LASTEXITCODE
+          }
+          
+          Write-Host "✅ Score commands test passed"
+        shell: pwsh
 
       - name: Test infer commands (Linux/macOS)
         if: runner.os != 'Windows'
@@ -108,11 +132,22 @@ jobs:
       - name: Test infer commands (Windows)
         if: runner.os == 'Windows'
         run: |
-          echo "Testing infer peptide..."
-          dist\pyprophet.exe infer peptide --in tests/data/test_data.osw --context global
+          Write-Host "Testing infer peptide..."
+          & dist\pyprophet.exe infer peptide --in tests/data/test_data.osw --context global
+          if ($LASTEXITCODE -ne 0) {
+            Write-Error "infer peptide failed with exit code $LASTEXITCODE"
+            exit $LASTEXITCODE
+          }
           
-          echo "Testing infer peptidoform..."
-          dist\pyprophet.exe infer peptidoform --in tests/data/test_data.osw --no-ipf_ms1_scoring
+          Write-Host "Testing infer peptidoform..."
+          & dist\pyprophet.exe infer peptidoform --in tests/data/test_data.osw --no-ipf_ms1_scoring
+          if ($LASTEXITCODE -ne 0) {
+            Write-Error "infer peptidoform failed with exit code $LASTEXITCODE"
+            exit $LASTEXITCODE
+          }
+          
+          Write-Host "✅ Infer commands test passed"
+        shell: pwsh
 
       - name: Test export commands (Linux/macOS)
         if: runner.os != 'Windows'
@@ -133,18 +168,27 @@ jobs:
       - name: Test export commands (Windows)
         if: runner.os == 'Windows'
         run: |
-          echo "Testing export score-report..."
-          dist\pyprophet.exe export score-report --in tests/data/test_data.osw
+          Write-Host "Testing export score-report..."
+          & dist\pyprophet.exe export score-report --in tests/data/test_data.osw
+          if ($LASTEXITCODE -ne 0) {
+            Write-Error "export score-report failed with exit code $LASTEXITCODE"
+            exit $LASTEXITCODE
+          }
           
-          echo "Testing export tsv..."
-          dist\pyprophet.exe export tsv --in tests/data/test_data.osw --out test_data.tsv
+          Write-Host "Testing export tsv..."
+          & dist\pyprophet.exe export tsv --in tests/data/test_data.osw --out test_data.tsv
+          if ($LASTEXITCODE -ne 0) {
+            Write-Error "export tsv failed with exit code $LASTEXITCODE"
+            exit $LASTEXITCODE
+          }
           
           # Verify output file was created
           if (-not (Test-Path test_data.tsv)) {
             Write-Error "ERROR: test_data.tsv was not created!"
             exit 1
           }
-          Write-Output "Output file created successfully: test_data.tsv"
+          Write-Host "Output file created successfully: test_data.tsv"
+          Write-Host "✅ Export commands test passed"
         shell: pwsh
 
       # Test DEB package installation
@@ -215,10 +259,23 @@ jobs:
           # Test installed executable
           Write-Host "Testing installed pyprophet..."
           & $installPath --version
+          if ($LASTEXITCODE -ne 0) {
+            Write-Error "Installed pyprophet --version failed"
+            exit $LASTEXITCODE
+          }
+          
           & $installPath --help
+          if ($LASTEXITCODE -ne 0) {
+            Write-Error "Installed pyprophet --help failed"
+            exit $LASTEXITCODE
+          }
           
           # Test with actual data
           & $installPath score --in tests/data/test_data.osw --level ms1ms2 --pi0_lambda 0 0 0
+          if ($LASTEXITCODE -ne 0) {
+            Write-Error "Installed pyprophet score failed"
+            exit $LASTEXITCODE
+          }
           
           # Clean up - uninstall silently
           Write-Host "Uninstalling..."
